--- a/public/sc/pink.css
+++ b/public/sc/pink.css
@@ -41,7 +41,7 @@ input[type="submit"] {
 .navbar-default .navbar-nav > li:hover > a,
 .navbar-default .navbar-nav > li > a.active {
   color: #fff;
-  background-color: #0abc9a;
+  background-color: #00C1B3;
 }
 .dropdown > li:hover > a,
 .sup-dropdown li:hover > a {
